TEST_PROGRAMS/INVALID/08/badShortDecl.go
package main;

func main() {
  i, j[1] := 1, 10;

}
